fix: Layout issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-.container {
+.waitingScreen {
   display: flex;
   flex-direction: column;
   place-content: center center;
