--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,29 +1,6 @@
 .inner {
-  position: relative;
-
-  display: flex;
-  flex-direction: column;
-
   width: 100%;
   height: 100%;
   margin: 0 auto;
   padding: 32px 24px;
-
-  &::before {
-    content: "";
-
-    position: fixed;
-    z-index: -1;
-    top: 0;
-    right: 0;
-    left: 0;
-
-    height: 100%;
-
-    opacity: 0.2;
-    background-color: $cream-25;
-    background-image: url("./bg.png");
-    background-position: 0% 50%;
-    background-size: 120px;
-  }
 }
