--- a/src/index.scss
+++ b/src/index.scss
@@ -28,3 +28,31 @@ html {
   display: flex;
   height: 100dvh;
 }
+
+.container {
+  position: relative;
+
+  display: grid;
+
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+
+  &::before {
+    content: "";
+
+    position: fixed;
+    z-index: -1;
+    top: 0;
+    right: 0;
+    left: 0;
+
+    height: 100%;
+
+    opacity: 0.2;
+    background-color: $cream-25;
+    background-image: url("./assets/bg.png");
+    background-position: 0% 50%;
+    background-size: 120px;
+  }
+}
